--- a/v308/content/durchfuehrung.tex
+++ b/v308/content/durchfuehrung.tex
@@ -21,17 +21,18 @@ Die Felder überlagern sich, was zur Folge hat, dass das Gesamtfeld im Inneren d
 Permeabilität $\mu_{\text{r}} > 1$ aus. 
 \subsubsection{Ferromagnetismus}
 \label{subsubsec:FERRO}
-Ferromagnetische Stoffe können ohne ein äußeres Magnetfeld eigene permanente Mangetfelder besitzen. Diese bilden sich, da die einzelnen Atome jeweils magnetische Momente besitzen, welche 
-dazu neigen sich parallel zueinander auszurichten. Die ferromagnetischen Stoffe, die kein Magnetfeld besitzen, werden meist sehr stark von einem äußeren Pol angezogen. Solche Stoffe 
+Ferromagnetische Stoffe können ohne ein äußeres Magnetfeld eigene permanente Magnetfelder besitzen. Diese bilden sich, da die einzelnen Atome jeweils magnetische Momente besitzen, welche 
+dazu neigen, sich parallel zueinander auszurichten. Die ferromagnetischen Stoffe, die kein Magnetfeld besitzen, werden meist sehr stark von einem äußeren Pol angezogen. Solche Stoffe 
 sind durch eine Permeabilität $\mu_{\text{r}} >> 1$ gekennzeichnet. Eine weitere wichtige Eigenschaft solcher Stoffe ist, dass sie sich magnetisieren lassen. Diese Magnetisierung findet
 durch ein äußeres Magnetfeld statt und bewirkt, dass ein ferromagnetischer Stoff sein eigenes Magnetfeld aufbaut oder verändert. Hysteresekurven, wie zum Beispiel die in \autoref{fig:PlotHysterese},
 geben die Magnetisierung gegen eine gewissen Größe an. In diesem Fall wird sie gegen den Strom angegeben.
 \subsection{Messung des Magnetfeldes einer langen Spule}
 \label{subsec:D_Lange_Spule}
-Zur Messung des Magnetfeldes einer langen Spule benötigt man die Spule selbst, eine logitudinale Hall-Sonde und einen Stromgenerator. Zunächst wird die Spule an den Generator angeschlossen.
-Der Generator wird dann so eingestellt, dass die Spule von circa $1 \unit{\ampere}$ durchflossen wird. Dann befestigt man die Hall-Sonde in einem Gestell, sodass immer möglichst auf der
-gleichen Achse gemessen wird. Man wählt einem Messnullpunkt und schiebt die Hallsonde dann langsam in die Spule ein. Dabei wird die relative Auslenkung zum Messnullpunkt und die Magnetfeldstärke 
-an diesen Stellen gemessen. Aus Symetriegründen reicht es aus bis zur Mitte der Spule zu messen.
+Zur Messung des Magnetfeldes einer langen Spule benötigt man die Spule selbst, eine logitudinale Hall-Sonde und ein Netzgerät. Zunächst wird die Spule an das Netzgerät angeschlossen.
+Dieses wird dann so eingestellt, dass die Spule von circa $1 \unit{\ampere}$ durchflossen wird. Anschließend wird die Hallsonde in einem Gestell befestigt, sodass die Messung 
+möglichst auf einer Achse erfolgt.
+Es wird ein Messnullpunkt festgelegt und die Sonde langsam in die Spule eingeführt. Dabei wird die relative Auslenkung zum Messnullpunkt und die Magnetfeldstärke 
+an verschiedenen Stellen gemessen. Aus Symmetriegründen reicht es aus, bis zur Mitte der Spule zu messen.
 \begin{figure}
     \centering
     \caption{In diesem Bild ist die verwendete lange Spule abgebildet. Die Länge der Spule wurde graphisch auf $16.4 \: \unit{\centi\metre}$ bestimmt.}
@@ -41,10 +42,11 @@ an diesen Stellen gemessen. Aus Symetriegründen reicht es aus bis zur Mitte der
 \subsection{Messung des Magnetfelds eines Spulenpaares}
 \label{subsec:D_Spulenpaar}
 Für diese Messung benötigt man ein Helmholtzspulepaar, dessen Abstand man variieren kann. Außerdem benötigt man eine transversale Hall-Sonde zur Messung des Magnetfeldes. Zunächst
-werden die beiden Spulen in Reihe an einen Generator angschlossen, sodass beide Spulen gleichsinnig vom Strom durchflossen werden. Nun muss zunächst ein Abstand zwischen den Spulen 
-festgelegt werden. Die Hall-Sonde wird, wie in \autoref{fig:Aufbau_Spulenpaar} dargestellt ist, oben in die Führung eingesetzt. Dadurch ist garantiert, dass man entlang einer Achse misst.
-Dann werden in sinnvollen Abständen Messungen durchgeführt. Dabei wird sowohl der Bereich zwischen den Spulen als auch der Bereich außerhalb der Spulen gemessen. Dies wird für 3 unterschiedliche 
-Längen wiederholt.
+werden die beiden Spulen in Reihe an ein Netzgerät angschlossen, sodass beide Spulen gleichsinnig vom Strom durchflossen werden. Nun wird ein Abstand zwischen den Spulen 
+festgelegt. Die Hall-Sonde wird, wie in \autoref{fig:Aufbau_Spulenpaar} dargestellt ist, in eine Führungsschiene eingesetzt. Dadurch ist garantiert, dass stets entlang einer Achse
+gemessen wird.
+Anschließend werden Wertepaare der Position auf der Achse und der magnetischen Flussdichte in sinnvollen Abständen notiert. Dabei wird sowohl der Bereich zwischen den Spulen, 
+als auch der Bereich außerhalb der Spulen gemessen. Dies wird für 3 unterschiedliche Abstände der Spulen wiederholt.
 \begin{figure}
     \centering
     \caption{In diesem Bild ist der Versuchsaufbau zum Helmholtzspulenpaar dargestellt.\cite{v308}}
@@ -54,11 +56,12 @@ Längen wiederholt.
 \subsection{Messung des Magnetfeldes einer Toroid-Spule zur Bestimmung der Hysteresekurve}
 \label{subsec:D_Hysterese}
 Für diese Messung wird eine Toroidspule und eine transversale Hall-Sonde benötigt. Die Hall-Sonde wird über eine Vorrichtung in den Luftspalt der Toroidspule gehalten. Die Toroidspule
-wir an einen Generator angeschlossen. Bevor dieser eingeschaltet wird, muss die Spule möglichst gut entmagnetisiert werden. Dann wird der Generator eingeschaltet. Nun wird der Strom
-der Spule langsam hochgeregelt, wobei immer die dazugehörigen Feldstärken notiert werden. In dieser Messung können $1\unit{\ampere}$-Schritte gemacht werden. Es wird gemessen bis die 
-gesamte Hysteresekurve abgemessen wurde. Das bedeuetet nach Beginn der Messung wird der Generator zunächst bis zu $10\unit{\ampere}$ hochfahren und auch wieder bis zur $0$ runtergeregelt.
-Um dann in den negativen Bereich zu gelangen wird die Verkabelung umgedreht. Dann wird der gleiche Messprozess nochmal durchgeführt. Danach wird nochmals umgepolt und lediglich ein mal 
-bis $10\unit{\ampere}$ hochgemessen. Nun wurde die gesamte Hysteresekurve abgemessen.
+wir an ein Netzgerät angeschlossen. Bevor dieses eingeschaltet wird, muss die Spule ausreichend gut entmagnetisiert werden. Nun wird der Strom
+der Spule langsam hochgeregelt, wobei die dazugehörigen Feldstärken notiert werden. Es bietet sich an, eine Schrittweite von $1 \: \unit{\ampere}$ zu wählen. Es wird gemessen bis die 
+gesamte Hysteresekurve abgemessen wurde. Dies bedeutet, dass die Stromstärke bis zu einem Wert von $10 \: \unit{\ampere}$ erhöht wird und anschließend stückweise verringert wird, bis
+wieder $0 \: \unit{\ampere}$ eingestellt sind.
+Um die Messung im negativen Bereich fortzusetzen, wird die Verkabelung gegenpolig angeschlossen. Der zuvorige Messprozess wird für die negative Polarität wiederholt. 
+Zuletzt werden die Kabel wie zu Anfang angeschlossen und bis zu einer Stromstärke von $10 \: \unit{\ampere}$ gemessen.
 \begin{figure}
     \centering
     \caption{Dies ist ein Bild des Versuchaufbaus zur Toroidspule.\cite{v308}}
