--- a/v308/content/diskussion.tex
+++ b/v308/content/diskussion.tex
@@ -12,7 +12,7 @@ $r = 2.05 \: \unit{\centi\metre}$ nicht den Idealbedingungen einer langen Spule 
 
 Bei der Messung zum Helmholtzspulenpaar wurden die drei Abstände $d_1 = 10\: \unit{\centi\metre}$, $d_2~=~15\: \unit{\centi\metre}$
 und $d_3 = 20\: \unit{\centi\metre}$ betrachtet. Die experimentell bestimmten Werte im Mittelpunkt der Spulen haben die relativen Abweichungen 
-$\symup{\Delta_{\text{rel}1}} = 0.29 \%$, $\symup{\Delta_{\text{rel}2}} = 5.31\%$ und $\symup{\Delta_{\text{rel}1}} = 6.35 \%$ zu den Theoriewerten, wobei in allen 
+$\symup{\Delta_{\text{rel}1}} = 0.29 \%$, $\symup{\Delta_{\text{rel}2}} = 5.31\%$ und $\symup{\Delta_{\text{rel}3}} = 6.35 \%$ zu den Theoriewerten, wobei in allen 
 drei Messungen keine experimentellen Werte vorhanden waren, die exakt in der Spulenmitte lagen. Des Weiteren sind die Skalen, mit denen der Spulenabstand und die 
 Position der Hallsonde bestimmt wurden um ca. $2.3\: \unit{\centi\metre}$ zueinander verschoben, weshalb der Mittelpunkt der Spulen nicht genau ermittelt werden konnte.
 Da alle experimentellen Werte über den Theoriewerten liegen, ist es möglich, dass die Ursache dafür eine zu hohe Stromstärke ist. Diese wurde an einem
@@ -25,5 +25,5 @@ Die Hysteresekurve des Kernmaterials der Ringspule lässt sich nicht mit Theorie
 Sättigung $+B_S = 709.5 \: \unit{\milli\tesla}$ und $-B_S = -709.6 \: \unit{\milli\tesla}$ nur um $0.1 \unit{\milli\tesla}$ voneinander ab. 
 
 
-Zusammenfassend lässt sich festellen, dass die Messergebnisse im Rahmen der Mess- Ungenauigkeiten und Unsicherheiten gut mit der Theorie übereinstimmen. Die berechneten
+Zusammenfassend lässt sich festellen, dass die Messergebnisse im Rahmen der Messgenauigkeit mit der Theorie übereinstimmen. Die berechneten
 Abweichungen liegen trotz der möglichen Fehlerquellen in einem akzeptablen Bereich. 
