nur leichte kirrekturen

--- a/v308/content/auswertung.tex
+++ b/v308/content/auswertung.tex
@@ -3,7 +3,7 @@
 Die Material- und Gerätekonstanten befinden sich im Anhang. Ebenso werden alle Messtabellen nur im Anhang aufgeführt, da die Daten auch den Plots entnommen werden können.
 \subsection{Magnetfeld einer langen Spule}
 \label{subsec:A_langeSpule}
-Die Messwerte dieser Spule sind in \autoref{fig:PlotLangeSpule} grafisch dargestellt. Der Spuleneingang befindet sich in der Grafik bei ca. $0 \: \unit{\centi\metre}$.
+Die Messwerte dieser Spule sind in \autoref{fig:PlotLangeSpule} grafisch dargestellt. Der Spuleneingang befindet sich in der Grafik bei circa $0 \: \unit{\centi\metre}$.
 Innerhalb der Spule scheinen die Messwerte ein Plateau konstanter Feldstärke zu erreichen, was an der eingezeichneten Theoriegeraden deutlich wird. 
 Für den Verlauf des Magnetfeldes außerhalb der Spule, ist ein Abfallen der Feldstärke zu erkennen. Da der letzte Messwert in der Mitte der Spule liegt, sollte dieser auch den geeignetsten experimentellen Wert
 für das homogene Magnetfeld innerhalb der Spule liefern. Daher lautet $B_{\text{exp}} = 2.335\:\unit{\milli\tesla}$. 
