--- a/v308/content/diskussion.tex
+++ b/v308/content/diskussion.tex
@@ -1,6 +1,6 @@
 \section{Diskussion}
 \label{sec:Diskussion}
-Zuerst werden die Messergebnisse zur langen Spule betrachtet. Der theoretische Wert für die magnetische Flussdichte innerhalb der Spule beträgt 
+Zuerst werden die Messergebnisse zur langen Spule diskutiert. Der theoretische Wert für die magnetische Flussdichte innerhalb der Spule beträgt 
 $B_{\text{Theorie}} = 2.299\:\unit{\milli\tesla}$, der experimentelle Wert wurde zu $B_{\text{exp}} = 2.335\:\unit{\milli\tesla}$ bestimmt. 
 Dies entspricht einer relativen Abweichung von $\symup{\Delta_{\text{rel}}} = 1.57 \%$, was in Anbetracht der aufbaubedingten Messungenauigkeiten 
 eine sehr geringe Abweichung ist. Auffällig ist, dass das gemessene Magnetfeld im Inneren der Spule nicht homogen verläuft, sondern bis zu einer Eindringtiefe von
