--- a/v308/content/durchfuehrung.tex
+++ b/v308/content/durchfuehrung.tex
@@ -25,7 +25,7 @@ Ferromagnetische Stoffe können ohne ein äußeres Magnetfeld eigene permanente 
 dazu neigen, sich parallel zueinander auszurichten. Die ferromagnetischen Stoffe, die kein Magnetfeld besitzen, werden meist sehr stark von einem äußeren Pol angezogen. Solche Stoffe 
 sind durch eine Permeabilität $\mu_{\text{r}} >> 1$ gekennzeichnet. Eine weitere wichtige Eigenschaft solcher Stoffe ist, dass sie sich magnetisieren lassen. Diese Magnetisierung findet
 durch ein äußeres Magnetfeld statt und bewirkt, dass ein ferromagnetischer Stoff sein eigenes Magnetfeld aufbaut oder verändert. Hysteresekurven, wie zum Beispiel die in \autoref{fig:PlotHysterese},
-geben die Magnetisierung gegen eine gewissen Größe an. In diesem Fall wird sie gegen den Strom angegeben.
+geben die Magnetisierung gegen eine gewisse Größe an. In diesem Fall wird sie gegen den Strom angegeben.
 \subsection{Messung des Magnetfeldes einer langen Spule}
 \label{subsec:D_Lange_Spule}
 Zur Messung des Magnetfeldes einer langen Spule benötigt man die Spule selbst, eine logitudinale Hall-Sonde und ein Netzgerät. Zunächst wird die Spule an das Netzgerät angeschlossen.
@@ -41,12 +41,12 @@ an verschiedenen Stellen gemessen. Aus Symmetriegründen reicht es aus, bis zur 
 \end{figure}
 \subsection{Messung des Magnetfelds eines Spulenpaares}
 \label{subsec:D_Spulenpaar}
-Für diese Messung benötigt man ein Helmholtzspulepaar, dessen Abstand man variieren kann. Außerdem benötigt man eine transversale Hall-Sonde zur Messung des Magnetfeldes. Zunächst
+Für diese Messung wird ein Helmholtzspulepaar benötigt, dessen Abstand variiert werden kann. Außerdem wird eine transversale Hall-Sonde zur Messung des Magnetfeldes benötigt. Zunächst
 werden die beiden Spulen in Reihe an ein Netzgerät angschlossen, sodass beide Spulen gleichsinnig vom Strom durchflossen werden. Nun wird ein Abstand zwischen den Spulen 
 festgelegt. Die Hall-Sonde wird, wie in \autoref{fig:Aufbau_Spulenpaar} dargestellt ist, in eine Führungsschiene eingesetzt. Dadurch ist garantiert, dass stets entlang einer Achse
 gemessen wird.
 Anschließend werden Wertepaare der Position auf der Achse und der magnetischen Flussdichte in sinnvollen Abständen notiert. Dabei wird sowohl der Bereich zwischen den Spulen, 
-als auch der Bereich außerhalb der Spulen gemessen. Dies wird für 3 unterschiedliche Abstände der Spulen wiederholt.
+als auch der Bereich außerhalb der Spulen gemessen. Dies wird für drei unterschiedliche Abstände der Spulen wiederholt.
 \begin{figure}
     \centering
     \caption{In diesem Bild ist der Versuchsaufbau zum Helmholtzspulenpaar dargestellt.\cite{v308}}
