--- a/v308/content/diskussion.tex
+++ b/v308/content/diskussion.tex
@@ -1,10 +1,10 @@
 \section{Diskussion}
 \label{sec:Diskussion}
-Zuerst werden die Messergebnisse zur langen Spule diskutiert. Der theoretische Wert für die magnetische Flussdichte innerhalb der Spule beträgt 
+Zuerst werden die Messergebnisse zur langen Spule betrachtet. Der theoretische Wert für die magnetische Flussdichte innerhalb der Spule beträgt 
 $B_{\text{Theorie}} = 2.299\:\unit{\milli\tesla}$, der experimentelle Wert wurde zu $B_{\text{exp}} = 2.335\:\unit{\milli\tesla}$ bestimmt. 
 Dies entspricht einer relativen Abweichung von $\symup{\Delta_{\text{rel}}} = 1.57 \%$, was in Anbetracht der aufbaubedingten Messungenauigkeiten 
 eine sehr geringe Abweichung ist. Auffällig ist, dass das gemessene Magnetfeld im Inneren der Spule nicht homogen verläuft, sondern bis zu einer Eindringtiefe von
-ca. $2 \: \unit{\centi\metre}$ noch deutlich ansteigt und auch bis $5 \unit{\centi\metre}$ nicht eindeutig als homogen betrachtet werden kann.
+ca. $2 \: \unit{\centi\metre}$ noch deutlich ansteigt und auch bis $5\: \unit{\centi\metre}$ nicht eindeutig als homogen betrachtet werden kann.
 Dies zeigt, dass die theoretischen Näherungen einer "langen"\: Spule nicht vollständig den realen Verhältnissen entsprechen, da die Randeffekte in einem größeren
 Bereich zu Abweichungen führen. Eine Ursache dafür ist, dass die verwendete Spule mit einer Länge von etwa $l = 16.4\: \unit{\centi\metre}$ und einem Radius von 
 $r = 2.05 \: \unit{\centi\metre}$ nicht den Idealbedingungen einer langen Spule entspricht.
@@ -20,9 +20,9 @@ analogen Messgerät auf $4 \: \unit{\ampere}$ geregelt, wobei eine Ungenauigkeit
 Spulenabstandes über die Längenskala. Insgesamt stimmen die Messwerte mit dem Verlauf der Theoriekurven weitgehend überein, was auf die Qualität dieser hindeutet.
 
 
-Die Hysteresekurve des Kernmaterials der Ringspule lässt sich nicht mit Theoriewerten vergleichen. Jedoch stimmt sie mit dem allgemeinen Verlauf einer Hysteresekurve gut
+Die Hysteresekurve des Kernmaterials der Ringspule lässt sich nicht mit Theoriewerten vergleichen. Jedoch stimmt sie mit dem allgemeinen Verlauf einer Hysteresekurve
 überein und weist eine hohe Symmetrie auf, was ebenfalls ein Indikator für die Qualität der Messung ist. So weichen beispielsweise die Werte der positiven- und negativen 
-Sättigung $+B_S = 709.5 \: \unit{\milli\tesla}$ und $-B_S = -709.6 \: \unit{\milli\tesla}$ nur um $0.1 \unit{\milli\tesla}$ voneinander ab. 
+Sättigung $+B_S = 709.5 \: \unit{\milli\tesla}$ und $-B_S = -709.6 \: \unit{\milli\tesla}$ nur um $0.1\: \unit{\milli\tesla}$ voneinander ab. 
 
 
 Zusammenfassend lässt sich festellen, dass die Messergebnisse im Rahmen der Messgenauigkeit mit der Theorie übereinstimmen. Die berechneten
