--- a/v308/content/theorie.tex
+++ b/v308/content/theorie.tex
@@ -1,7 +1,7 @@
 \section{Ziel}
 \label{sec:Ziel}
 Ziel des Versuches ist die Vermessung und anschließende Analyse der Magnetfelder verschiedener Spulen. Betrachtet werden eine "lange" \: Spule, ein Helmholtzspulenpaar und eine 
-Toroidspule. Eine Spule wird als lange Spule bezeichnet, wenn die Länge der Spule groß gegenüber dem Spulendurchmesser ist.
+Toroidspule. Eine Spule wird als \textit{lange Spule} bezeichnet, wenn die Länge der Spule groß gegenüber dem Spulendurchmesser ist.
 Es sollen der Verlauf der Magnetfeldstärke der ersten beiden Spulen und die Hysteresekurve des Kernmaterials der Toroidspule untersucht werden.
 
 \section{Theorie}
