Noch nen mini change xd

--- a/v106/content/auswertung.tex
+++ b/v106/content/auswertung.tex
@@ -76,8 +76,8 @@ keinen Einfluss auf die Dynamik hat. Gemessen wurden die Schwingungsdauern $T_l,
 Der Index $l$ beschreibt jeweils das linke Pendel, $r$ bezeichnet das rechte Pendel. Zu den Längen $l_1$ und $l_2$ lassen sich die 
 theoretisch vorhergesagten Frequenzen der Pendel errechnen. Mit Gleichung \eqref{eqn:omega} ergeben sich die theoretischen Frequenzen $\omega_{+1\text{, Theorie}} = (5.87\pm 0.01)\:\unit{\hertz}$ und 
 $\omega_{+2\text{, Theorie}} = (3.537\pm 0.002)\:\unit{\hertz}$. Aus den gemessenen Werten wird zunächst der Mittelwert gebildet. Die Fehler des Mittelwertes ergeben sich nach Gleichung \eqref{eqn:MWFehler}.
-Daraus folgen die fehlerbehafteten Schwingungsdauern $\overline{T_l}$, $\overline{T_r}$ und $\overline{T_+}$ für beide Pendellängen. Diese kann man durch Gleichung \eqref{eqn:omega} in 
-die zugehörigen Frequenzen überführen.
+Daraus folgen die fehlerbehafteten Schwingungsdauern $\overline{T_l}$, $\overline{T_r}$ und $\overline{T_+}$ für beide Pendellängen. Diese können mit Gleichung \eqref{eqn:omega} in 
+die zugehörigen Frequenzen überführt werden.
 \begin{table}
     \centering
     \caption{Mittelwerte der Messungen und daraus resultierende Frequenzen}
