--- a/v106/content/durchfuehrung.tex
+++ b/v106/content/durchfuehrung.tex
@@ -10,11 +10,11 @@ verwendet werden, also solche, bei denen die Kleinwinkelnäherung noch möglichs
 Pendellänge von $70\:\unit{\centi\metre}$ ergibt sich daher eine maximale Auslenkung von $6.1\:\unit{\centi\metre}$.
 
 
-Für diesen Versuch benötigt man zwei identische Pendel (siehe \autoref{fig:Aufbau1}), welche durch eine Feder gekoppelt werden können (siehe \autoref{fig:Aufbau2}).
+Für diesen Versuch werden zwei identische Pendel benötigt (siehe \autoref{fig:Aufbau1}), welche durch eine Feder gekoppelt werden können (siehe \autoref{fig:Aufbau2}).
 \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{content/Einzelpendel.jpg}
-	\caption{Aufbau des Versuchs: Zwei Stabpendel mit höhenverstellbaren Massen.}
+	\caption{Zu sehen sind die beiden Stabpendel mit den runden Massen.}
 	\label{fig:Aufbau1}
 \end{figure}
 Zuerst wird die Schwingungsdauer eines einfachen Pendels bestimmt. Dazu werden fünf Schwingungsdauern gemessen, um den Fehler der Zeitmessung möglichst klein zu halten.
@@ -25,7 +25,7 @@ Anschließend wird die Kopplungsfeder an die Pendel angebracht, wie in \autoref{
 \begin{figure}
     \centering
     \includegraphics[width=0.4\textwidth]{content/Gekoppelt.jpg}
-	\caption{Stabpendel mit Kopplungsfeder.}
+	\caption{An den Stabpendeln wurde die Kopplungsfeder montiert.}
 	\label{fig:Aufbau2}
 \end{figure}
 Zuerst wird eine gleichsinnige Schwingung der gekoppelten Pendel untersucht. Dazu werden die Pendel, wie in \autoref{fig:Gleichsinnig} zu sehen ist, um den gleichen Winkel ausgelenkt.
