--- a/v308/content/diskussion.tex
+++ b/v308/content/diskussion.tex
@@ -1,5 +1,12 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Die im Folgenden genannten relativen Abweichungen einer Größe $x$ werden über den Zusammenhang 
+\begin{equation*}
+    \symup{\Delta_{\text{rel}}} = \frac{\lvert x_{\text{Theorie}}- x_{\text{exp}}\rvert}{x_{\text{Theorie}}}
+\end{equation*}
+berechnet.
+
+
 Zuerst werden die Messergebnisse zur langen Spule betrachtet. Der theoretische Wert für die magnetische Flussdichte innerhalb der Spule beträgt 
 $B_{\text{Theorie}} = 2.299\:\unit{\milli\tesla}$, der experimentelle Wert wurde zu $B_{\text{exp}} = 2.335\:\unit{\milli\tesla}$ bestimmt. 
 Dies entspricht einer relativen Abweichung von $\symup{\Delta_{\text{rel}}} = 1.57 \%$, was in Anbetracht der aufbaubedingten Messungenauigkeiten 
