Guten Vorsatz umgesetzt und dieses H****sohn Protokoll angefangen

--- a/lit.bib
+++ b/lit.bib
@@ -68,6 +68,13 @@
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1884546/mod_resource/content/1/V308.pdf},
 }
 
+@online{v355,
+	title        = {V355 - Gekoppelte Schwingkreise},
+	organization = {TU Dortmund},
+	urldate      = {2022-01-02},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1884597/mod_resource/content/1/V355.pdf},
+}
+
 @book{Demtröder_Exp_P_1,
 	author       = {Professor Dr. Wolfgang Demtröder},
 	title        = {Experimentalphysik 1 Mechanik und Wärme},
