--- a/v355/content/theorie.tex
+++ b/v355/content/theorie.tex
@@ -1,4 +1,58 @@
+\section{Ziel}
+\label{sec:Ziel}
+In diesem Versuch sollen gekoppelte Schwingkreise auf ihren Energieübergang untersucht werden. Dazu werden die Frequenzabhängigkeiten des Stroms, sowie die Fundamentalschwingungen mittles der Lissajous-Figuren,
+betrachtet.
 \section{Theorie}
 \label{sec:Theorie}
-
-\cite{sample}
+Zu Beginn wird disskutiert wann ein System gekoppelt genannt wird, da ein solches System in diesem Versuch untersucht wird. Von einem gekoppelten System wird gesprochen, wenn es aus zwei "Untersystemen"
+besteht, welche im gegenseitigem Energieaustausch stehen. Ein leichtes Beispiel für ein gekoppeltes System ist ein gekoppeltes Pendel. Die beiden Einzelpendel entsprechen dabei den Untersystemen.
+Diese werden dann durch eine Feder gekoppelt, wodurch sie im gegenseitigen Energieaustausch stehen. In disem Versuch wird anstatt gekoppelter Pendel kapazitiv gekoppelte Schwingkreise betrachtet.
+Bei solchen Systemen ist es häufig von Interesse das Verhalten unter äußerer Anregung zu untersuchen.
+\subsection{Kapazitiv gekoppelte Schwingkreise}
+\label{T_KgS}
+Nun wird ein Schwingkreise wie in \autoref{fig:T_skgS} betrachtet. Die Kopplung findet über den Kondensator $C_k$ statt, wodurch sich die beiden Schwingkreise das elektrische Feld dieses Kondensators
+teilen. Durch die kirchhoffschen Regeln lassen sich zwei unabhängige Differentialgleichungen aufstellen. Die Lösung dieser beschreiben den überlagerten Stromverlauf, sowie den Verlauf der Differenz.
+Die Summe der beiden Ströme $I_1$ und $I_2$ wird durch 
+\begin{equation}
+    \label{eqn:T_Iplus}
+    \left(I_1 + I_2\right)\left(t\right) = \left(I_{1_0} + I_{2_0}\right)\frac{\text{cos}\left(t\right)}{\sqrt{LC}}
+\end{equation}
+beschrieben. Die Lösung der Differenz lautet
+\begin{equation}
+    \label{eqn:T_Iminus}
+    \left(I_1 - I_2\right)\left(t\right) = \left(I_{1_0} - I_{2_0}\right)\text{cos}\left(\frac{t}{\sqrt{L\left(\frac{1}{C}+\frac{2}{C_k}\right)^{-1}}}\right)
+\end{equation}.
+Aus \autoref{eqn:T_Iplus} und \autoref{eqn:T_Iminus} lassen sich die Schwinungsfrequenzen $\nu^+$ und $\nu^-$ aufstellen.
+\begin{equation}
+    \label{eqn:T_nup}
+    \nu^+ = \frac{1}{2\pi\sqrt{LC}}
+\end{equation}
+\begin{equation}
+    \label{T_num}
+    \nu^- =  \frac{1}{2\pi\sqrt{L\left(\frac{1}{C}+\frac{2}{C_k}\right)^{-1}}}
+\end{equation}
+Desweiteren lassen sich aus \autoref{eqn:T_Iplus} und \autoref{eqn:T_Iminus} die Stomverläufe $I_1(t)$ und $I_2(t)$ aufstellen. Durch Addition und Subtraktion der beiden genannten Gleichungen 
+folgt 
+\begin{equation}
+    \label{T_I}
+    I_{1,2}(t) = \frac{1}{2}\left(I_{1_0} + I_{2_0}\right)\text{cos}\left(2\pi\nu^+ t\right) - \frac{1}{2}\left(I_{1_0} - I_{2_0}\right)\text{cos}\left(2\pi\nu^- t\right)
+\end{equation}
+Betrachtet man nun den Fall der gleichsinnigen Schwingung $\left(I_{1_0} = I_{2_0}\right)$ fällt der Differentteil der \autoref{T_I} weg und die Oszillatoren schwingen gleichphasig mit der Frequenz 
+$\nu^+$.
+Für den gegensinnigen Schwingfall $\left(I_{1_0} = -I_{2_0}\right)$ ergibt sich, dass die Oszillatoren gegenphasig mit der Frequenz $\nu^-$ schwingen.
+Beim Schwebungsfall gilt zur Zeit $t = 0$ $I_{1_0}\neq 0$ und $I_{2_0} = 0$. Daraus ergit sich für \autoref{T_I} 
+\begin{equation*}
+    I_1(t) = \frac{1}{2} I_{1_0}\text{cos}\left(\frac{1}{2}(\omega^+ + \omega^-)t\right) \text{cos}\left(\frac{1}{2}(\omega^+ - \omega^-)t\right)
+\end{equation*}
+und
+\begin{equation*}
+    I_2(t) = \frac{1}{2} I_{1_0}\text{sin}\left(\frac{1}{2}(\omega^+ + \omega^-)t\right) \text{sin}\left(\frac{1}{2}(\omega^+ - \omega^-)t\right)
+\end{equation*}
+.
+Die dazugehörige Schwebungsfrequenz ist durch $\frac{1}{2}\left(\nu^+ + \nu^-\right)$ gegeben.
+\begin{figure}
+    \centering
+    \caption{In dieser Abbildung ist die Skizze eines kapazitiv gekoppelten Schwingkreises zu sehen. \cite{v355}}
+    \label{fig:T_skgS}
+    \includegraphics{content/SkizzegekoppelterSchwingkreis.PNG}
+\end{figure}
