Fix der Referenzen

--- a/v355/content/durchfuehrung.tex
+++ b/v355/content/durchfuehrung.tex
@@ -1,15 +1,21 @@
 \section{Durchführung}
 \label{sec:Durchführung}
-Für die Durchführung des Versuches wird die in \autoref{fig:!!!!!!!BildEinfügenAMK!!!!!!!!} gezeigte Schaltung verwendet. 
+Für die Durchführung des Versuches wird die in \autoref{fig:Schaltung} gezeigte Schaltung verwendet. 
+\begin{figure}
+    \centering
+    \caption{Foto des verwendeten Schaltbaukastens. Zu erkennen sind die Werte der Verbauten Widerstände, Induktivitäten und Kapazitäten.}
+    \label{fig:Schaltung}
+    \includegraphics[width=0.5\textwidth]{content/Schaltung.jpg}
+\end{figure}
 
 \subsection{Justierung der Resonanzfrequenz}
 \label{subsec:Justierung}
 Bevor mit dem eigentlichen Messprogramm begonnen werden kann, müssen die beiden Schwingkreise auf die gleiche Resonanzfrequenz abgestimmt werden.
 \begin{figure}
     \centering
-    \includegraphics[width=0.5\textwidth]{content/Schaltung1.jpg}
-    \label{fig:Schaltung1}
 	\caption{Schaltskizze zur Bestimmung der Resonanzfrequenz \cite{v355}.}
+    \label{fig:Schaltung1}
+    \includegraphics[width=0.5\textwidth]{content/Schaltung1.jpg}
 \end{figure}
 Dazu wird zuerst die Resonanzfrequenz des linken Schwingkreises festgestellt. Unter Verwendung des Aufbaus aus \autoref{fig:Schaltung1} wird 
 der zeitliche Verlauf der am Y-Eingang gemessenen Spannung betrachtet. Durch Variation der Generatorfrequenz wird ein Extremum der Spannung gesucht. Trägt 
@@ -23,9 +29,9 @@ wird nun die Resonanzfrequenz des Schwingkreises auf die des Linken eingestellt.
 In den folgenden Messungen wird ein Aufbau gemäß \autoref{fig:Schaltung2} verwendet. 
 \begin{figure}
     \centering
-    \includegraphics[width=0.7\textwidth]{content/Schaltung2.jpg}
-    \label{fig:Schaltung1}
 	\caption{Skizze des Versuchaufbaus \cite{v355}.}
+    \label{fig:Schaltung2}
+    \includegraphics[width=0.7\textwidth]{content/Schaltung2.jpg}
 \end{figure}
 Um das Verhältnis der Frequenzen von Schwebung und Schwingung zu bestimmen, wird am Generator (links) eine Rechteckspannung mit einer Frequenz von etwa $400\, \unit{\hertz}$
 eingestellt. Der zeitliche Verlauf der am $50 \, \unit{\ohm}$ Widerstand abfallenden Spannung kann nun am Oszilloskop entnommen werden. Für die verschiedenen 
