--- a/v355/content/theorie.tex
+++ b/v355/content/theorie.tex
@@ -54,5 +54,5 @@ Die dazugehörige Schwebungsfrequenz ist durch $\frac{1}{2}\left(\nu^+ + \nu^-\r
     \centering
     \caption{In dieser Abbildung ist die Skizze eines kapazitiv gekoppelten Schwingkreises zu sehen. \cite{v355}}
     \label{fig:T_skgS}
-    \includegraphics{content/SkizzegekoppelterSchwingkreis.PNG}
+    \includegraphics[width = 0.6\textwidth]{content/SkizzegekoppelterSchwingkreis.PNG}
 \end{figure}
