--- a/v355/content/theorie.tex
+++ b/v355/content/theorie.tex
@@ -49,7 +49,7 @@ und
     I_2(t) = \frac{1}{2} I_{1_0}\text{sin}\left(\frac{1}{2}(\omega^+ + \omega^-)t\right) \text{sin}\left(\frac{1}{2}(\omega^+ - \omega^-)t\right)
 \end{equation*}
 .
-Die dazugehörige Schwebungsfrequenz ist durch $\frac{1}{2}\left(\nu^+ + \nu^-\right)$ gegeben.
+Die dazugehörige Schwebungsfrequenz ist durch $\left(\nu^- -\nu^+\right)$ gegeben.
 \begin{figure}
     \centering
     \caption{In dieser Abbildung ist die Skizze eines kapazitiv gekoppelten Schwingkreises zu sehen. \cite{v355}}
